--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,11 @@
   <section id="app">
     <header>
       <h1>Try Joy</h1>
+      <nav>
+        <ul>
+          <li><a href="https://github.com/jimf/joy-js">GitHub</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main class="sections">
