--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,7 @@
 
     <main class="sections">
       <div class="input-section">
-        <textarea name="input" placeholder="Type Joy code here and press ENTER to evaluate..."></textarea>
+        <textarea name="input" placeholder="Type Joy code here and press ENTER to evaluate..." spellcheck="false"></textarea>
       </div>
 
       <div class="output-section">
